# awsome_resize_src

./: CMakeLists.txt  README.md  main.cpp
